# BCI_arm_cam_grip

./: README.md  exe_launch.bash
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
devel/include/ur_msgs/: Analog.h  MasterboardDataMsg.h  RobotModeDataMsg.h
devel/include/visp_camera_calibration/: CalibPoint.h  CalibPointArray.h  ImageAndPoints.h  ImagePoint.h  calibrateRequest.h  calibrateResponse.h
devel/include/visp_hand2eye_calibration/: TransformArray.h  compute_effector_cameraRequest.h  compute_effector_cameraResponse.h  compute_effector_camera_quickRequest.h  compute_effector_camera_quickResponse.h  resetRequest.h  resetResponse.h
devel/include/visp_ros/: BlobTracker.h  ImagePoint.h  PoseStampedStatus.h  ProjectedPoint.h
devel/include/visp_tracker/: InitRequest.h  InitResponse.h  KltPoint.h  KltPoints.h  KltSettings.h  ModelBasedSettingsEdgeConfig.h  ModelBasedSettingsKltConfig.h  MovingEdgeSettings.h  MovingEdgeSite.h  MovingEdgeSites.h  TrackerSettings.h
devel/include/visual_servo/: RobotRelative.h  circle.h  circle1.h  joint_positon.h  pbvs_circles.h  toolposeChange.h
devel/lib/bci_grip/: bci_ur5  bci_ur_actual  col_align_dep  node_pic_cpp  node_pic_cpp2  readCam  test_position  test_realsense_show  testeigen  testpic_pub  transC  ur5_test_go_home_up
devel/lib/online_analysis/: datareceive  test_listener  test_pub.py  test_sub.py  test_talker
devel/lib/pkgconfig/: bci_grip.pc  key_read.pc  online_analysis.pc  qt_ros.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_3f_gripper_articulated_gazebo.pc  robotiq_3f_gripper_articulated_gazebo_plugins.pc  robotiq_3f_gripper_articulated_msgs.pc  robotiq_3f_gripper_control.pc  robotiq_3f_gripper_joint_state_publisher.pc  robotiq_3f_gripper_visualization.pc  robotiq_3f_rviz.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_modern_driver.pc  ur_msgs.pc  visp_auto_tracker.pc  visp_bridge.pc  visp_camera_calibration.pc  visp_hand2eye_calibration.pc  visp_ros.pc  visp_tracker.pc  (+2 more)
devel/lib/qt_ros/: qt_ros
devel/lib/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server_client_test  robotiq_2f_gripper_action_server_node
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_control/: robotiq_3f_gripper_can_node  robotiq_3f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_joint_state_publisher/: robotiq_3f_gripper_joint_states
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
devel/lib/visp_auto_tracker/: visp_auto_tracker
devel/lib/visp_bridge/: visp_bridge_convert_camera_parameters
devel/lib/visp_camera_calibration/: visp_camera_calibration_calibrator  visp_camera_calibration_camera  visp_camera_calibration_image_processing
devel/lib/visp_hand2eye_calibration/: visp_hand2eye_calibration_calibrator  visp_hand2eye_calibration_client
devel/lib/visp_ros/: test-vel  tutorial-franka-coppeliasim-cartesian-impedance-control  tutorial-franka-coppeliasim-dual-arm  tutorial-franka-coppeliasim-ibvs-apriltag  tutorial-franka-coppeliasim-joint-impedance-control  tutorial-franka-coppeliasim-pbvs-apriltag  tutorial-franka-real-ibvs-apriltag  tutorial-franka-real-joint-impedance-control  tutorial-franka-real-pbvs-apriltag  visp_ros_afma6_node  visp_ros_bebop2_visual_servo_node  visp_ros_biclops_node  visp_ros_blob_tracker_node  visp_ros_pbvs_blob_node  visp_ros_viper650_node  visp_ros_viper850_node
devel/lib/visp_tracker/: tracker  visp_tracker_client  visp_tracker_viewer
devel/lib/visual_servo/: hand_eye_arm_control  hand_eye_calculate  ur_getdata
devel/lib/wave_show/: wave_show.py
install/: .rosinstall
install/include/ur_msgs/: IOStates.h  SetIORequest.h  SetSpeedSliderFractionRequest.h  SetSpeedSliderFractionResponse.h
install/include/visp_ros/: BlobTracker.h  PoseStampedStatus.h  ProjectedPoint.h
install/lib/bci_grip/: node_pic_py.py
install/lib/online_analysis/: chatpub.py  onlineanalysis.py
install/lib/pkgconfig/: bci_grip.pc  online_analysis.pc  qt_ros.pc  ur10_e_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc  visp_ros.pc
install/lib/qt_ros/: qt_ros
install/lib/ur_modern_driver/: ur_driver
install/lib/visp_ros/: tutorial-franka-coppeliasim-ibvs-apriltag  tutorial-franka-coppeliasim-joint-impedance-control  tutorial-franka-coppeliasim-pbvs-apriltag  (+7 more)
src/: README.md
src/bci_grip/: .gitignore  CMakeLists.txt  README.md  package.xml
src/bci_grip/include/bci_grip/: subpicpubsig.h
src/bci_grip/launch/: bci_grip.launch
src/bci_grip/scripts/: some_note.md  ssvep_ptb_1.py  ssvep_ptb_2.py
src/bci_grip/src/: .node_pic.py.swp  bci_ur5.cpp  bci_ur_move.cpp  bci_ur_move_copy.cpp  cnn_brip.py  col_align_dep.cpp  gitNote.md  go_home_up.cpp  node_gripper.cpp  node_pic_cpp.cpp  node_pic_cpp2.cpp  readCam.cpp  rs_depth.cpp  subpicpubsig.cpp  test_position.cpp  test_realsense_show.cpp  testeigen.cpp  testpic_pub.cpp  transC.cpp
src/bci_grip/src/cornell_grasping_dataset/pos_label/: pcd0165cpos.txt
src/key_read/: CMakeLists.txt  package.xml
src/online_analysis/: CMakeLists.txt  README.md
src/qt_ros/: CMakeLists.txt  package.xml
src/qt_ros/include/qt_ros/: Packets.h  main_window.hpp  qnetstreamingreceiver.hpp  qnode.hpp
src/qt_ros/src/: FFT.cpp  main.cpp  main_window.cpp  qnetstreamingreceiver.cpp  qnode.cpp
src/qt_ros/ui/: main_window.ui
src/visual_servo/: CMakeLists.txt  README.md
src/wave_show/: CMakeLists.txt  README.md  main_window.cpp  package.xml
(+201 files in other folders)
